22.5
-----


22.4
-----

* [*] [internal] [Jetpack-only] Domains Dashboard Card: Immediately opening domains search after tapping the card. [#20638]
* [**] [Jetpack-only] Adds a dashboard card for viewing activity log. [#20569]
* [**] [Jetpack-only] Adds a dashboard card for viewing pages. [#20524]
* [*] [Jetpack-only] Block editor: Fix crash when trying to convert to regular blocks an undefined/deleted reusable block [https://github.com/WordPress/gutenberg/pull/50475]
* [**] Block editor: Tapping on a nested block now gets focus directly instead of having to tap multiple times depending on the nesting levels. [https://github.com/WordPress/gutenberg/pull/50108]
* [*] [Jetpack-only] Block editor: Use host app namespace in reusable block message [https://github.com/WordPress/gutenberg/pull/50478]
* [*] [internal] [Jetpack-only] Enables domain purchases in site creation A/B experiment. [#20670]
* [*] Classic Block: Fixes a crash that happens when attempting to add media to a classic block while the library permissions are missing. [#20666]

22.3
-----
* [*] [internal] Allow updating specific fields when updating media details. [#20606]
* [**] Block Editor: Enable VideoPress block (only on Simple WPCOM sites) [#20580]
* [**] [internal] Attempt to fix an image loading crash in post editor. [#20633]

22.2
-----
* [**] [Jetpack-only] Added a dashboard card for purchasing domains. [#20424]
* [*] [internal] [Jetpack-only] Redesigned the migration success card. [#20515]
* [**] [internal] Refactored Google SignIn implementation to not use the Google SDK [#20128]
* [***] Block Editor: Resolved scroll-jump issues and enhanced caret focus management [https://github.com/WordPress/gutenberg/pull/48791]
* [**] [Jetpack-only] Blogging Prompts: adds the ability to view other users' responses to a prompt. [#20540]

22.1
-----
* [**] [internal] Refactor updating account related Core Data operations, which ususally happens during log in and out of the app. [#20394]