@@ -1,5 +1,6 @@
 22.5
 -----
+* [*] [Jetpack-only] Reader: Fixed an issue that was causing the Report and Block actions to be missing from Post Menu actions sheet. [#20705]
 
 
 22.4
